Fri Nov 12 14:52:48 PST 1999
(Mandrake)

moving changelog to this dir, setting up ecvs to work here

-------------------------------------------------------------------------------

Fri Nov 12 14:53:43 PST 1999
(Mandrake)

test ecvs commit

-------------------------------------------------------------------------------

Fri Nov 12 16:51:08 PST 1999
(Mandrake)

debugging.  icky.

-------------------------------------------------------------------------------

Sat Nov 13 18:56:08 PST 1999
(Mandrake)

more debugging and FIXES to make it work again.

-------------------------------------------------------------------------------

Sat Nov 13 19:01:45 PST 1999
(Mandrake)

removed debugging code

-------------------------------------------------------------------------------

Sun Nov 14 14:07:14 PST 1999
(Mandrake)

fixes fixes fixes.  Still got a couple more minor ones to fix, as well as a
portability thing I just noticed.  :)

-------------------------------------------------------------------------------

Sun Nov 14 18:35:24 PST 1999
(Mandrake)

slight fix involing fat resizing.