@@ -45,3 +45,10 @@ Sun Nov 14 18:35:24 PST 1999
 (Mandrake)
 
 slight fix involing fat resizing.
+
+-------------------------------------------------------------------------------
+
+Tue Nov 23 12:06:39 PST 1999
+(Mandrake)
+
+adding regex.c into eConfig
